Closed Bug 184295 Opened 23 years ago Closed 22 years ago

double assert in nsAppRunner.cpp when command line service is unavailable

Categories

(Core Graveyard :: Cmd-line Features, defect)

defect
Not set
trivial

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: timwatt, Assigned: timeless)

References

()

Details

(Keywords: assertion)

Attachments

(1 file)

Filing a bug for timeless, who lacks a browser... (recent trunk build from CVS) Redundant assertion: NS_ASSERTION(NS_SUCCEEDED(rv), "failed to get command line service"); if (NS_FAILED(rv)) { NS_ASSERTION(PR_FALSE, "Could not obtain CmdLine processing service\n"); see URL.
Attached patch mix and matchSplinter Review
Attachment #108711 - Flags: superreview?(dveditz)
Attachment #108711 - Flags: review?(akkana)
Comment on attachment 108711 [details] [diff] [review] mix and match r=akkana
Attachment #108711 - Flags: review?(akkana) → review+
Comment on attachment 108711 [details] [diff] [review] mix and match sr=dveditz
Attachment #108711 - Flags: superreview?(dveditz) → superreview+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
rs vrfy.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: