Bug 184295 double assert in nsAppRunner.cpp when command line service is unavailable r=akkana sr=dveditz